
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_addr; } ;
typedef int sin ;
typedef int buf ;
typedef char FILE ;


 int AF_INET ;
 int BUFSIZ ;
 int SOCK_STREAM ;
 int chat (char*,char*,char*) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int errno ;
 int fatal (char*,...) ;
 char* fdopen (int,char*) ;
 scalar_t__ fgets (char*,int,char*) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int ,int) ;
 int socket (int ,int ,int ) ;
 int strerror (int ) ;

int main(int argc, char **argv)
{
    struct sockaddr_in sin;
    struct hostent *hp;
    char buf[BUFSIZ];
    int sock;
    FILE *fp;

    if (argc != 2)
        fatal("usage: %s host", argv[0]);
    if ((hp = gethostbyname(argv[1])) == 0)
        fatal("host %s not found", argv[1]);
    memset((char *) &sin, 0, sizeof(sin));
    sin.sin_family = AF_INET;
    memcpy((char *) &sin.sin_addr, hp->h_addr, sizeof(sin.sin_addr));
    sin.sin_port = htons(25);
    if ((sock = socket(AF_INET, SOCK_STREAM, 0)) < 0)
        fatal("socket: %s", strerror(errno));
    if (connect(sock, (struct sockaddr *) & sin, sizeof(sin)) < 0)
        fatal("connect to %s: %s", argv[1], strerror(errno));
    if ((fp = fdopen(sock, "r+")) == 0)
        fatal("fdopen: %s", strerror(errno));
    if (fgets(buf, sizeof(buf), fp) == 0)
        fatal("connection lost");
    chat(fp, "mail from:<me@me>", fp);
    for (;;)
        chat(fp, "rcpt to:<me@%s>", argv[1]);
}
